# dokuru

./: .dockerignore  .gitignore  .mailmap  Cargo.toml  LICENSE  README.md  docker-compose.yaml  docker-compose.yml  install.sh  wrangler.toml
crates/server/: Cargo.toml
crates/server/src/: lib.rs  routes.rs  state.rs
crates/server/src/feature/: mod.rs
crates/server/src/infrastructure/: config.rs  env.rs  logging.rs  mod.rs  server.rs
dokuru-agent/: Cargo.toml  build.rs  dokuru-agent.service  install.sh
dokuru-agent/hooks/: pre-push
dokuru-agent/src/: host_shell.rs  main.rs
dokuru-agent/src/api/: mod.rs  relay.rs  relay_docker.rs  routes.rs  state.rs
dokuru-agent/src/api/feature/: mod.rs  web_assets.rs
dokuru-agent/src/api/infrastructure/: config.rs  logging.rs  mod.rs  server.rs
dokuru-agent/src/audit/: checker.rs  engine_tests.rs  fix_helpers.rs  fixer.rs  mod.rs  rule_definition.rs  rule_registry.rs  rules.rs  types.rs  types_tests.rs
dokuru-agent/src/audit/checks/: mod.rs  section2.rs  section3.rs  section5.rs  section_trait.rs
dokuru-agent/src/audit/rule_registry/: mod.rs  section1.rs  section2.rs  section3.rs  section4.rs  section5.rs
dokuru-agent/src/cli/: cloudflare.rs  helpers.rs  mod.rs  utils.rs
dokuru-agent/src/cli/commands/: agent.rs  audit.rs  config.rs  configure.rs  doctor.rs  mod.rs  onboard.rs  restart.rs  serve.rs  status.rs  token.rs  uninstall.rs  update.rs  version.rs
dokuru-agent/src/cli/types/: args.rs
dokuru-agent/src/client/: mod.rs  ws_client.rs
dokuru-agent/src/docker/: containers.rs  containers_tests.rs  events.rs  images.rs  mod.rs  networks.rs  operations_tests.rs  stacks.rs  volumes.rs
dokuru-agent/tests/: api_integration_tests.rs  docker_integration_tests.rs
dokuru-deploy/: .gitignore  Cargo.toml  build.rs  install-remote.sh  install.sh
dokuru-deploy/src/: compose.rs  config.rs  generator.rs  ghcr.rs  main.rs  project.rs  release.rs  runtime.rs
dokuru-landing/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Trunk.toml  index.html  nginx.conf  package.json  vercel.json
dokuru-landing/public/: index.html
dokuru-landing/scripts/: vercel-build.sh
dokuru-landing/src/: App.tsx  app.rs  content.rs  index.css  lib.rs  main.rs  main.tsx
dokuru-landing/src/components/atoms/: dokuru_mark.rs  icon.rs  mod.rs  section_eyebrow.rs
dokuru-landing/src/components/landing/: AuditPanel.jsx  AuditPanel.tsx  CTA.tsx  Coverage.jsx  Coverage.tsx  DokuruMark.jsx  DokuruMark.tsx  Features.jsx  Features.tsx  FinalCTA.jsx  FinalCTA.tsx  Footer.jsx  Footer.tsx  Header.jsx  Header.tsx  Hero.jsx  Hero.tsx  HowItWorks.jsx  HowItWorks.tsx  Navbar.tsx  Problem.jsx  Problem.tsx  ScrollReveal.tsx  SecurityAudit.tsx  UseCases.jsx  UseCases.tsx  WhyDokuru.jsx  WhyDokuru.tsx
dokuru-landing/src/components/molecules/: audit_stats.rs  coverage_card.rs  feature_card.rs  mock_field.rs  mod.rs  status_badges.rs  support_item.rs  why_card.rs
dokuru-landing/src/components/organisms/: audit_panel.rs  coverage.rs  features.rs  final_cta.rs  footer.rs  header.rs  hero.rs  how_it_works.rs  mod.rs  problem.rs  why_dokuru.rs  workflow_panels.rs
dokuru-landing/src/components/ui/: button.tsx
dokuru-landing/src/hooks/: use-theme.ts  use-toast.tsx
dokuru-landing/src/pages/: Landing.jsx  Landing.tsx  landing.rs  mod.rs
dokuru-landing/src/utils/: clipboard.rs  mod.rs  page_motion.rs  reveal.rs
dokuru-landing/style/: main.css
dokuru-server/: .dockerignore  .env.example  .gitignore  Caddyfile  Cargo.toml  Dockerfile  Dockerfile.migrate  docker-compose.yml  migrate.sh
dokuru-server/.sqlx/: query-2eef21432d336bea0cb6655792f99cc1842d740303b4ce2c15e8f77a61243525.json  query-3bb0b1c85866c9cad018512816dee0939d1918f543ac028e281023c8b9877408.json  query-9368b10a4511cc03bef851bdeb7b7b5421108617cefcaa90b9125cdb3feaebaf.json  query-9db87f21bdc26e804c0a51865f1fe48e1c04e3c737f76ca160e020764f34c8c8.json  query-9ef9e7db4165817f7caba638778c19b47fb031f735efbc4013c531e508ab3af8.json
dokuru-server/config/: defaults.toml  local.toml.example  secrets.toml.example
dokuru-server/migrations/: 0008_add_encrypted_token_to_agents.down.sql  0008_add_encrypted_token_to_agents.up.sql  002_tokens.up.sql  002_users.up.sql  003_environments.up.sql  004_audit_results.up.sql  006_agents.down.sql  006_agents.up.sql  007_audit_results.down.sql  007_audit_results.up.sql  008_add_access_mode.down.sql  008_add_access_mode.up.sql  008_documents.up.sql  009_notifications.up.sql  010_notification_preferences.up.sql  011_audit_active_containers.down.sql  011_audit_active_containers.up.sql
dokuru-server/src/: bootstrap.rs  lib.rs  main.rs  routes.rs  state.rs
dokuru-server/src/feature/: mod.rs
dokuru-server/src/feature/admin/: agent.rs  audit.rs  mod.rs  routes.rs  system.rs  system_domain.rs
dokuru-server/src/feature/agent/: domain.rs  dto.rs  dto_tests.rs  entity.rs  handlers.rs  mod.rs  relay.rs  repository.rs  routes.rs  service.rs  service_tests.rs
dokuru-server/src/feature/audit/: handlers.rs  mod.rs  models.rs  repository.rs  routes.rs  service.rs
dokuru-server/src/feature/audit_result/: domain.rs  dto.rs  dto_tests.rs  entity.rs  handlers.rs  mod.rs  repository.rs  service.rs
dokuru-server/src/feature/auth/: credentials.rs  domain.rs  dto.rs  handlers.rs  mod.rs  oauth_service.rs  password_auth_service.rs  repository.rs  routes.rs  service.rs  service_tests.rs  token_service.rs  utils_tests.rs
dokuru-server/src/feature/document/: domain.rs  entity.rs  handlers.rs  mod.rs  repository.rs  routes.rs  service.rs
dokuru-server/src/feature/environments/: handlers.rs  mod.rs  (+3 more)
dokuru-server/src/infrastructure/: config.rs  email.rs  env.rs  logging.rs  mod.rs  server.rs  toml_config.rs
dokuru-server/src/websocket/: handler.rs  mod.rs  tests.rs
dokuru-server/templates/email/: email_change.html  reset_password.html  verify_email.html
dokuru-server/tests/: api_integration_tests.rs  auth_blacklist_test.rs  auth_flow.rs  database_integration_tests.rs  redis_test.rs  websocket_integration_test.rs
dokuru-server/tests/common/: auth_flow.rs  fixtures.rs  mod.rs
(+426 files in other folders)
