[package]
name = "dokuru-worker"
version = "0.1.0"
edition = "2021"
authors = ["rifuki <mail@rifuki.dev>"]

[lib]
crate-type = ["cdylib"]

[dependencies]
worker = { version = "0.8", features = ['http', 'axum'] }
worker-macros = { version = "0.8", features = ['http'] }
axum = { version = "0.8", default-features = false }
tower-service = "0.3.3"
