[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
authors = ["rifuki"]
license = "MIT"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
eyre = "0.6"
color-eyre = "0.6"
tracing = "0.1"
bollard = "0.18"

[package]
name = "dokuru"
version.workspace = true
edition.workspace = true

[[bin]]
name = "dokuru"
path = "src/main.rs"

[dependencies]
dokuru-core = { path = "crates/core" }
dokuru-server = { path = "crates/server" }
dokuru-tui = { path = "crates/tui" }
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
toml = "0.8"
tokio.workspace = true
eyre.workspace = true
anyhow.workspace = true
color-eyre.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
bollard.workspace = true
tokio-tungstenite = { version = "0.24", features = ["native-tls"] }
futures-util = "0.3"
serde.workspace = true
serde_json.workspace = true
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
