[package]
name = "dokuru"
version = "0.1.0"
edition = "2024"
authors = ["rifuki"]
license = "MIT"

[[bin]]
name = "dokuru"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4", features = ["derive"] }
cliclack = "0.3"
bitflags = "2.6"

# Async runtime
tokio = { version = "1", features = ["full"] }
futures = "0.3"
futures-util = "0.3"
async-trait = "0.1"

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

# Error handling
eyre = "0.6"
anyhow = "1"
color-eyre = "0.6"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"

# Docker
bollard = "0.18"

# WebSocket (agent mode)
tokio-tungstenite = { version = "0.24", features = ["rustls-tls-native-roots"] }

# Web server (local API mode)
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"

# Config
config = { version = "0.15", default-features = false, features = ["toml"] }

# HTTP client
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "blocking"] }

# Utils
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
hostname = "0.4"
base64 = "0.22"

# Crypto (for token auth)
rand = "0.8"
sha2 = "0.10"
hex = "0.4"
subtle = "2.6"
libc = "0.2.185"

[dev-dependencies]
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
