[package]
name = "dokuru-server"
version = "0.1.0"
edition = "2024"

[workspace]
# Empty workspace to prevent being part of parent workspace

[dependencies]
# Web framework
axum               = { version = "0.8", features = ["ws", "macros"] }
axum-extra         = { version = "0.10", features = ["cookie"] }
tokio              = { version = "1", features = ["full"] }
tower-http         = { version = "0.6", features = ["cors", "trace"] }
dashmap            = "6"

# Serialization
serde              = { version = "1", features = ["derive"] }
serde_json         = "1"

# Async
futures            = "0.3"
async-trait        = "0.1"

# Logging
tracing            = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "serde"] }
tracing-appender   = "0.2"

# Error handling
eyre               = "0.6"
color-eyre         = "0.6"
thiserror          = "1.0"

# Config
dotenvy            = "0.15"

# Database
sqlx               = { version = "0.8", features = ["postgres", "runtime-tokio-rustls", "chrono", "uuid", "migrate"] }
uuid               = { version = "1", features = ["v4", "serde"] }
chrono             = { version = "0.4", features = ["serde"] }

# Auth & Crypto
jsonwebtoken       = "9"
argon2             = "0.5"
sha2               = "0.10"
rand               = "0.8"
md5                = "0.7"
hex                = "0.4"

# Validation
validator          = { version = "0.20", features = ["derive"] }

# Cookie
time               = "0.3"
constant_time_eq   = "0.3"

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1
