[package]
name = "dokuru-server"
version = "0.1.0"
description = "Dokuru cloud API server"
edition = "2024"
license = "Elastic-2.0"

[dependencies]
axum = { version = "0.8.8", features = ["macros", "multipart", "ws"] }
axum-extra = { version = "0.12.5", features = ["cookie"] }
bytes = "1.11.1"
chrono = { version = "0.4.44", features = ["serde"] }
dokuru-core = { path = "../dokuru-core" }
tower-http = { version = "0.6.8", features = ["cors", "trace", "fs"] }
dashmap = "6.1.0"

# Async
async-trait = "0.1.89"
tokio = { version = "1.49.0", features = [
  "macros",
  "rt-multi-thread",
  "signal",
  "time",
] }
tokio-tungstenite = "0.26.2"
futures = "0.3"

# Error handling
color-eyre = "0.6.5"
dotenvy = "0.15.7"
eyre = "0.6.12"
thiserror = "2.0.18"
config = { version = "0.15", default-features = false, features = ["toml"] }
toml_edit = "0.22"

# Serialization
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"

# HTTP Client
reqwest = { version = "0.12", default-features = false, features = [
  "json",
  "rustls-tls-webpki-roots",
] }

# Validation
validator = { version = "0.20.0", features = ["derive"] }
url = "2.5"

# Logging
tracing = "0.1.44"
tracing-appender = "0.2.4"
tracing-subscriber = { version = "0.3.22", features = ["serde", "env-filter"] }

# Database
sqlx = { version = "0.8.6", features = [
  "postgres",
  "runtime-tokio-rustls",
  "chrono",
  "uuid",
  "migrate",
  "json",
] }
uuid = { version = "1.21.0", features = ["v4", "serde"] }

# Cookie
time = "0.3.47"
constant_time_eq = "0.4.2"

# Crypto
md5 = "0.8.0"
rand = "0.8.5"

# Auth
jsonwebtoken = "9"
argon2 = "0.5.3"
rustls = { version = "0.23", default-features = false, features = [
  "ring",
  "std",
  "tls12",
] }

# Redis
bb8-redis = "0.26"
redis = { version = "1.0.4", features = ["tokio-comp"] }
sha2 = "0.11.0"
hex = "0.4.3"
base64 = "0.22.1"

[dev-dependencies]
tower = { version = "0.5.3", features = ["util"] }
http-body-util = "0.1.3"
testcontainers = "0.27.1"
testcontainers-modules = { version = "0.15.0", features = ["postgres"] }

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
codegen-units = 1

[profile.release-debug]
inherits = "release"
strip = false
debug = true
