[package]
name = "dokuru-server"
version.workspace = true
edition.workspace = true

[dependencies]
dokuru-core = { path = "../core" }
axum = { version = "0.8", features = ["ws", "macros"] }
tower-http = { version = "0.6", features = ["cors"] }
rust-embed = "8"
mime_guess = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
chrono.workspace = true
anyhow.workspace = true
eyre.workspace = true
color-eyre.workspace = true
bollard.workspace = true
tracing.workspace = true
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tracing-appender = "0.2"
dotenvy = "0.15"
futures = "0.3"
